# minbpe-hs

./: LICENSE  README.md  minbpe-hs.cabal
examples/: Basic.hs  Regex.hs
src/BPE/: Base.hs  Basic.hs  Regex.hs
tests/: Main.hs  TestBase.hs  TestBasic.hs  TestRegex.hs
